--- a/starter/app/src/main/res/values/attrs.xml
+++ b/starter/app/src/main/res/values/attrs.xml
@@ -2,6 +2,7 @@
 <resources>
     <declare-styleable name="LoadingButton">
         <attr name="text" format="string"/>
+        <attr name="motion_speed" format="integer"/>
 
     </declare-styleable>
 </resources>
