--- a/starter/app/src/main/res/layout/activity_detail.xml
+++ b/starter/app/src/main/res/layout/activity_detail.xml
@@ -38,6 +38,9 @@
             android:layout_height="50dp"
             android:layout_marginTop="320dp"
             android:text="@android:string/ok"
+            android:textSize="25sp"
+            android:textColor="@color/white"
+            android:background="@color/progress_circle"
             app:layout_constraintBottom_toBottomOf="@+id/included"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +64,7 @@
             android:layout_height="132dp"
             android:layout_marginStart="60dp"
             android:layout_marginTop="56dp"
-            android:textSize="@dimen/default_text_size"
+            android:textSize="@dimen/radio_group_text_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/fileNameID"
