--- a/starter/app/src/main/res/values/colors.xml
+++ b/starter/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#07C2AA</color>
-    <color name="colorPrimaryDark">#004349</color>
+    <color name="colorPrimaryDark">#06374d</color>
     <color name="colorAccent">#F9A825</color>
     <color name="white">#FFFFFF</color>
 
@@ -16,6 +16,6 @@
     <color name="button_background">#26C6DA</color>
     <color name="progress_circle">#FFCA28</color>
 
-
+    <color name="download_background">#06374d</color>
 
 </resources>
