--- a/starter/app/src/main/res/values/styles.xml
+++ b/starter/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="RadioGroupButtons" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textSize">@dimen/radio_group_text_size</item>
+    </style>
+
 </resources>
